[package]
name = "spatiub_demo_server"
version = "0.1.0"
authors = ["pierre-l <pierre.larger@gmail.com>"]

[dependencies]
bincode = "1.0.1"
bytes = "0.4"
clap = "2.32.0"
env_logger = "0.5.12"
futures = "0.1.23"
libc = "0.2"
log = "0.4.3"
rand = "0.5.5"
serde = "1.0.70"
serde_derive = "1.0.70"
spatiub_demo_core = { path = "../demo_core" }
spatiub = { path = "../lib" }
tokio = "0.1.8"
tokio-codec = "0.1"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
