[package]
name = "spatiub"
version = "0.1.0"
authors = ["pierre-l <pierre.larger@gmail.com>"]

[dependencies]
bincode = "1.0.1"
futures = "0.1.23"
env_logger = "0.5.12"
log = "0.4.3"
rand = "0.5.5"
serde = "1.0.70"
serde_derive = "1.0.70"
uuid = { version = "0.6.5", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "spatial_benchmark"
harness = false